native/ailia.h

/****************************************************************
 * ライブラリ状態定義
 **/

/**
 * \~japanese
 * @def AILIA_STATUS_SUCCESS
 * @brief 成功
 *
 * \~english
 * @def AILIA_STATUS_SUCCESS
 * @brief Successful
 */
#define AILIA_STATUS_SUCCESS (0)
/**
 * \~japanese
 * @def AILIA_STATUS_INVALID_STATE
 * @brief ailia の内部状態が不正
 * @remark APIドキュメントを確認し、呼び出し手順が正しいかどうかを確認してください。
 *
 * \~english
 * @def AILIA_STATUS_INVALID_STATE
 * @brief The internal status of the ailia is incorrect.
 * @remark Please check API document and API call steps.
 */
#define AILIA_STATUS_INVALID_STATE (-7)
/**
 * \~japanese
 * @def AILIA_STATUS_NDIMENSION_SHAPE
 * @brief 形状が5次元以上であることを示す
 * @remark
 * 4次元までしか扱えない旧APIが呼び出されました。APIドキュメントを参照し、5次元以上が扱えるAPIを利用してください。
 *
 * \~english
 * @def AILIA_STATUS_NDIMENSION_SHAPE
 * @brief Dimension of shape is 5 or more.
 * @remark The called API are supported up to 4 dimension. Please replace API that described on API document.
 */
#define AILIA_STATUS_NDIMENSION_SHAPE (-23)

/****************************************************************
 * ネットワークオブジェクトのインスタンス
 **/

struct AILIANetwork;


/****************************************************************
 * 形状情報
 **/

#define AILIA_SHAPE_VERSION (1)

typedef struct _AILIAShape {
	/**
	 * \~japanese
	 * X軸のサイズ
	 *
	 * \~english
	 * Size along the X axis
	 */
	unsigned int x;
	/**
	 * \~japanese
	 * Y軸のサイズ
	 *
	 * \~english
	 * Size along the Y axis
	 */
	unsigned int y;
	/**
	 * \~japanese
	 * Z軸のサイズ
	 *
	 * \~english
	 * Size along the Z axis
	 */
	unsigned int z;
	/**
	 * \~japanese
	 * W軸のサイズ
	 *
	 * \~english
	 * Size along the W axis
	 */
	unsigned int w;
	/**
	 * \~japanese
	 * 次元情報
	 *
	 * \~english
	 * Dimension information
	 */
	unsigned int dim;
} AILIAShape;


/**
 * \~japanese
 * @brief 推論時の出力データの形状を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param shape 出力データの各次元の大きさの格納先配列(dim-1, dim-2, ... ,1, 0順で格納)
 * @param dim shapeの次元
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、それ以外のエラーの場合はエラーコードを返す。
 * @details
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Gets the shape of the output data during inference.
 * @param net A network instance pointer
 * @param shape The storage location of the shape array. (It stores dim-1, dim-2, ... ,1, 0 order.)
 * @param dim The size of shape
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaGetOutputShapeND(struct AILIANetwork* net, unsigned int* shape, unsigned int dim);


/**
 * \~japanese
 * @brief 推論を行い推論結果を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param dest 推論結果の書き出し先バッファにX,Y,Z,Wの順でnumeric型で格納  サイズはネットファイルのoutputSizeとなる
 * @param dest_size 推論結果の書き出し先バッファのbyte数
 * @param src 推論データ X,Y,Z,Wの順でnumeric型で格納 サイズはネットファイルのinputSizeとなる
 * @param src_size 推論データのbyte数
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Performs the inferences and provides the inference result.
 * @param net A network instance pointer
 * @param dest The result is stored in the inference result destination buffer as numeric type data in the order of X,
 * Y, Z, and W. The buffer has the same size as the network file outputSize.
 * @param dest_size The number of bytes for the destination buffer for the inference result
 * @param src The input is stored as numeric type data in the order of the inference data X, Y, Z, and W. The input has
 * the same size as the network file inputSize.
 * @param src_size The number of bytes of the inference data
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API
ailiaPredict(struct AILIANetwork* net, void* dest, unsigned int dest_size, const void* src, unsigned int src_size);


/****************************************************************
 * 状態取得API
 **/

/**
 * \~japanese
 * @brief 推論時の内部データ(Blob)の数を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param blob_count blobの数の格納先
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *   このAPIはailiaOpenStreamXXX呼び出し後より利用可能です。
 *   なお、ailiaOpenStreamXXX呼び出し時は入出力Blobのみが列挙され、ailiaOpneWeightXXX呼び出し時に中間Blobの列挙が行われます。
 *   そのためailiaOpenStreamXXX呼び出し直後とailiaOpneWeightXXX呼び出し直後で返答する数が変わる場合があります。
 *
 * \~english
 * @brief Gets the amount of internal data (blob) during inference.
 * @param net A network instance pointer
 * @param blob_count Storage location of the number of blobs
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenStreamXXX().
 *   In addition, this api returuns number of sum of inputs and outputs when after call ailiaOpenStreamXXX.
 *   And, when call ailiaOpenWeightXXX, enumerate and optimzie intermediate blobs.
 *   So, this api may return more count after call ailiaOpenWeightXXX.
 */
int AILIA_API ailiaGetBlobCount(struct AILIANetwork* net, unsigned int* blob_count);


/**
 * \~japanese
 * @brief 推論時の内部データ(Blob)の形状を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param shape データの形状情報の格納先
 * @param blob_idx blobのインデックス (0～ ailiaGetBlobCount() -1)
 * @param version AILIA_SHAPE_VERSION
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、5次元以上の場合 \ref AILIA_STATUS_NDIMENSION_SHAPE 、
 *   それ以外のエラーの場合はエラーコードを返す。
 * @details
 *   形状が5次元以上の場合は ailiaGetBlobDim() 、 ailiaGetBlobShapeND() を利用してください。
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Gets the shape of the internal data (blob) during inference.
 * @param net A network instance pointer
 * @param shape Storage location of the data shape information
 * @param blob_idx The index of the blob (0 to  ailiaGetBlobCount() -1)
 * @param version AILIA_SHAPE_VERSION
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS .
 *   And if shape has 5 or more dimension, it returns  \ref AILIA_STATUS_NDIMENSION_SHAPE , or an error code otherwise.
 * @details
 *   When dimension of shape is 5 or more, please use  ailiaGetBlobDim() and  ailiaGetBlobShapeND().
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaGetBlobShape(struct AILIANetwork* net, AILIAShape* shape, unsigned int blob_idx, unsigned int version);


/**
 * \~japanese
 * @brief 推論時の内部データ(Blob)の次元を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param dim blobの次元の格納先
 * @param blob_idx blobのインデックス (0～ ailiaGetBlobCount() -1)
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、それ以外のエラーの場合はエラーコードを返す。
 * @details
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Gets the dimension of the internal data (blob) during inference.
 * @param net A network instance pointer
 * @param dim The storage location of the dimension
 * @param blob_idx The index of the blob (0 to  ailiaGetBlobCount() -1)
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaGetBlobDim(struct AILIANetwork* net, unsigned int* dim, unsigned int blob_idx);


/**
 * \~japanese
 * @brief 推論時の内部データ(Blob)の形状を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param shape blobの各次元の大きさの格納先配列(dim-1, dim-2, ... ,1, 0順で格納)
 * @param dim shapeの次元
 * @param blob_idx blobのインデックス (0～ ailiaGetBlobCount() -1)
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、それ以外のエラーの場合はエラーコードを返す。
 * @details
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Gets the amount of internal data (blob) during inference.
 * @param net A network instance pointer
 * @param shape The storage location of the shape array. (It stores dim-1, dim-2, ... ,1, 0 order.)
 * @param dim The size of shape
 * @param blob_idx The index of the blob (0 to  ailiaGetBlobCount() -1)
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaGetBlobShapeND(struct AILIANetwork* net, unsigned int* shape, unsigned int dim, unsigned int blob_idx);


/**
 * \~japanese
 * @brief 推論時の内部データ(Blob)を取得します。
 * @param net ネットワークオブジェクトポインタ
 * @param dest 推論結果の書き出し先バッファにX,Y,Z,Wの順でnumeric型で格納
 * @param dest_size 推論結果の書き出し先バッファのbyte数
 * @param blob_idx blobのインデックス (0～ ailiaGetBlobCount() -1)
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *    ailiaPredict() または ailiaUpdate() を一度も実行していない場合は \ref AILIA_STATUS_INVALID_STATE が返ります。
 *
 * \~english
 * @brief Gets the internal data (blob) during inference.
 * @param net A network instance pointer
 * @param dest The result is stored in the inference result destination buffer as numeric type data in the order of X,
 * Y, Z, and W.
 * @param dest_size The number of bytes for the inference result destination buffer
 * @param blob_idx The index of the blob (0 to  ailiaGetBlobCount() -1)
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   If  ailiaPredict()  or  ailiaUpdate()  is not run at all, the function returns  \ref AILIA_STATUS_INVALID_STATE .
 */
int AILIA_API ailiaGetBlobData(struct AILIANetwork* net, void* dest, unsigned int dest_size, unsigned int blob_idx);


/**
 * \~japanese
 * @brief 事前に指定した入力データで推論を行います。
 * @param net ネットワークオブジェクトポインタ
 * @return
 *   成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
 * @details
 *    ailiaSetInputBlobData() を用いて入力を与えた場合などに用います。
 *   推論結果は ailiaGetBlobData() で取得してください。
 *   このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
 *
 * \~english
 * @brief Makes inferences with the input data specified in advance.
 * @param net A network instance pointer
 * @return
 *   If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
 * @details
 *   This function is used when, for example, the input is provided with  ailiaSetInputBlobData() .
 *   Get the inference result with  ailiaGetBlobData() .
 *   This API can be call after call ailiaOpenWeighXXX().
 */
int AILIA_API ailiaUpdate(struct AILIANetwork* net);