lib/ffi/ailia.dart


  /// \~japanese
  /// @brief 推論時の出力データの形状を取得します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param shape 出力データの各次元の大きさの格納先配列(dim-1, dim-2, ... ,1, 0順で格納)
  /// @param dim shapeの次元
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、それ以外のエラーの場合はエラーコードを返す。
  /// @details
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Gets the shape of the output data during inference.
  /// @param net A network instance pointer
  /// @param shape The storage location of the shape array. (It stores dim-1, dim-2, ... ,1, 0 order.)
  /// @param dim The size of shape
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaGetOutputShapeND(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Uint32> shape,
    int dim,
  ) {
    return _ailiaGetOutputShapeND(
      net,
      shape,
      dim,
    );
  }

  late final _ailiaGetOutputShapeNDPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>,
              ffi.Uint32)>>('ailiaGetOutputShapeND');
  late final _ailiaGetOutputShapeND = _ailiaGetOutputShapeNDPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>, int)>();

  /// \~japanese
  /// @brief 推論を行い推論結果を取得します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param dest 推論結果の書き出し先バッファにX,Y,Z,Wの順でnumeric型で格納  サイズはネットファイルのoutputSizeとなる
  /// @param dest_size 推論結果の書き出し先バッファのbyte数
  /// @param src 推論データ X,Y,Z,Wの順でnumeric型で格納 サイズはネットファイルのinputSizeとなる
  /// @param src_size 推論データのbyte数
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Performs the inferences and provides the inference result.
  /// @param net A network instance pointer
  /// @param dest The result is stored in the inference result destination buffer as numeric type data in the order of X,
  /// Y, Z, and W. The buffer has the same size as the network file outputSize.
  /// @param dest_size The number of bytes for the destination buffer for the inference result
  /// @param src The input is stored as numeric type data in the order of the inference data X, Y, Z, and W. The input has
  /// the same size as the network file inputSize.
  /// @param src_size The number of bytes of the inference data
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaPredict(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Void> dest,
    int dest_size,
    ffi.Pointer<ffi.Void> src,
    int src_size,
  ) {
    return _ailiaPredict(
      net,
      dest,
      dest_size,
      src,
      src_size,
    );
  }

  late final _ailiaPredictPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>,
              ffi.Uint32, ffi.Pointer<ffi.Void>, ffi.Uint32)>>('ailiaPredict');
  late final _ailiaPredict = _ailiaPredictPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>, int,
          ffi.Pointer<ffi.Void>, int)>();

  /// \~japanese
  /// @brief 推論時の内部データ(Blob)の数を取得します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param blob_count blobの数の格納先
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// このAPIはailiaOpenStreamXXX呼び出し後より利用可能です。
  /// なお、ailiaOpenStreamXXX呼び出し時は入出力Blobのみが列挙され、ailiaOpneWeightXXX呼び出し時に中間Blobの列挙が行われます。
  /// そのためailiaOpenStreamXXX呼び出し直後とailiaOpneWeightXXX呼び出し直後で返答する数が変わる場合があります。
  ///
  /// \~english
  /// @brief Gets the amount of internal data (blob) during inference.
  /// @param net A network instance pointer
  /// @param blob_count Storage location of the number of blobs
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This API can be call after call ailiaOpenStreamXXX().
  /// In addition, this api returuns number of sum of inputs and outputs when after call ailiaOpenStreamXXX.
  /// And, when call ailiaOpenWeightXXX, enumerate and optimzie intermediate blobs.
  /// So, this api may return more count after call ailiaOpenWeightXXX.
  int ailiaGetBlobCount(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Uint32> blob_count,
  ) {
    return _ailiaGetBlobCount(
      net,
      blob_count,
    );
  }

  late final _ailiaGetBlobCountPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>,
              ffi.Pointer<ffi.Uint32>)>>('ailiaGetBlobCount');
  late final _ailiaGetBlobCount = _ailiaGetBlobCountPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>)>();

  /// \~japanese
  /// @brief 推論時の内部データ(Blob)の形状を取得します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param shape データの形状情報の格納先
  /// @param blob_idx blobのインデックス (0～ ailiaGetBlobCount() -1)
  /// @param version AILIA_SHAPE_VERSION
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、5次元以上の場合 \ref AILIA_STATUS_NDIMENSION_SHAPE 、
  /// それ以外のエラーの場合はエラーコードを返す。
  /// @details
  /// 形状が5次元以上の場合は ailiaGetBlobDim() 、 ailiaGetBlobShapeND() を利用してください。
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Gets the shape of the internal data (blob) during inference.
  /// @param net A network instance pointer
  /// @param shape Storage location of the data shape information
  /// @param blob_idx The index of the blob (0 to  ailiaGetBlobCount() -1)
  /// @param version AILIA_SHAPE_VERSION
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS .
  /// And if shape has 5 or more dimension, it returns  \ref AILIA_STATUS_NDIMENSION_SHAPE , or an error code otherwise.
  /// @details
  /// When dimension of shape is 5 or more, please use  ailiaGetBlobDim() and  ailiaGetBlobShapeND().
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaGetBlobShape(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<AILIAShape> shape,
    int blob_idx,
    int version,
  ) {
    return _ailiaGetBlobShape(
      net,
      shape,
      blob_idx,
      version,
    );
  }

  late final _ailiaGetBlobShapePtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<AILIAShape>,
              ffi.Uint32, ffi.Uint32)>>('ailiaGetBlobShape');
  late final _ailiaGetBlobShape = _ailiaGetBlobShapePtr.asFunction<
      int Function(
          ffi.Pointer<AILIANetwork>, ffi.Pointer<AILIAShape>, int, int)>();

  /// \~japanese
  /// @brief 推論時の内部データ(Blob)の次元を取得します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param dim blobの次元の格納先
  /// @param blob_idx blobのインデックス (0～ ailiaGetBlobCount() -1)
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、それ以外のエラーの場合はエラーコードを返す。
  /// @details
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Gets the dimension of the internal data (blob) during inference.
  /// @param net A network instance pointer
  /// @param dim The storage location of the dimension
  /// @param blob_idx The index of the blob (0 to  ailiaGetBlobCount() -1)
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaGetBlobDim(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Uint32> dim,
    int blob_idx,
  ) {
    return _ailiaGetBlobDim(
      net,
      dim,
      blob_idx,
    );
  }

  late final _ailiaGetBlobDimPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>,
              ffi.Uint32)>>('ailiaGetBlobDim');
  late final _ailiaGetBlobDim = _ailiaGetBlobDimPtr.asFunction<
      int Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>, int)>();

  /// \~japanese
  /// @brief 推論時の内部データ(Blob)の形状を取得します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param shape blobの各次元の大きさの格納先配列(dim-1, dim-2, ... ,1, 0順で格納)
  /// @param dim shapeの次元
  /// @param blob_idx blobのインデックス (0～ ailiaGetBlobCount() -1)
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、それ以外のエラーの場合はエラーコードを返す。
  /// @details
  /// このAPIはailiaOpenWeighXXX呼び出し後より利用可能です。
  ///
  /// \~english
  /// @brief Gets the amount of internal data (blob) during inference.
  /// @param net A network instance pointer
  /// @param shape The storage location of the shape array. (It stores dim-1, dim-2, ... ,1, 0 order.)
  /// @param dim The size of shape
  /// @param blob_idx The index of the blob (0 to  ailiaGetBlobCount() -1)
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// This API can be call after call ailiaOpenWeighXXX().
  int ailiaGetBlobShapeND(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Uint32> shape,
    int dim,
    int blob_idx,
  ) {
    return _ailiaGetBlobShapeND(
      net,
      shape,
      dim,
      blob_idx,
    );
  }

  late final _ailiaGetBlobShapeNDPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>,
              ffi.Uint32, ffi.Uint32)>>('ailiaGetBlobShapeND');
  late final _ailiaGetBlobShapeND = _ailiaGetBlobShapeNDPtr.asFunction<
      int Function(
          ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Uint32>, int, int)>();

  /// \~japanese
  /// @brief 推論時の内部データ(Blob)を取得します。
  /// @param net ネットワークオブジェクトポインタ
  /// @param dest 推論結果の書き出し先バッファにX,Y,Z,Wの順でnumeric型で格納
  /// @param dest_size 推論結果の書き出し先バッファのbyte数
  /// @param blob_idx blobのインデックス (0～ ailiaGetBlobCount() -1)
  /// @return
  /// 成功した場合は \ref AILIA_STATUS_SUCCESS 、そうでなければエラーコードを返す。
  /// @details
  /// ailiaPredict() または ailiaUpdate() を一度も実行していない場合は \ref AILIA_STATUS_INVALID_STATE が返ります。
  ///
  /// \~english
  /// @brief Gets the internal data (blob) during inference.
  /// @param net A network instance pointer
  /// @param dest The result is stored in the inference result destination buffer as numeric type data in the order of X,
  /// Y, Z, and W.
  /// @param dest_size The number of bytes for the inference result destination buffer
  /// @param blob_idx The index of the blob (0 to  ailiaGetBlobCount() -1)
  /// @return
  /// If this function is successful, it returns  \ref AILIA_STATUS_SUCCESS , or an error code otherwise.
  /// @details
  /// If  ailiaPredict()  or  ailiaUpdate()  is not run at all, the function returns  \ref AILIA_STATUS_INVALID_STATE .
  int ailiaGetBlobData(
    ffi.Pointer<AILIANetwork> net,
    ffi.Pointer<ffi.Void> dest,
    int dest_size,
    int blob_idx,
  ) {
    return _ailiaGetBlobData(
      net,
      dest,
      dest_size,
      blob_idx,
    );
  }

  late final _ailiaGetBlobDataPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int32 Function(ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>,
              ffi.Uint32, ffi.Uint32)>>('ailiaGetBlobData');
  late final _ailiaGetBlobData = _ailiaGetBlobDataPtr.asFunction<
      int Function(
          ffi.Pointer<AILIANetwork>, ffi.Pointer<ffi.Void>, int, int)>();
